# persistent-evdev-rs

./: .gitignore  Cargo.toml  LICENSE.md  PKGBUILD  README.md  config.json  create_tar.sh  flake.nix  rustfmt.toml
src/: capabilities.rs  main.rs
systemd/: persistent-evdev-rs.service  persistent-evdev.service
udev/: 60-persistent-input-rs-uinput.rules
