[package]
name = "persistent-evdev-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
udev = "0.7.0"
evdev = { git="https://github.com/FlorianNAdam/evdev", branch="phys"}
serde = {version="1.0.164", features=["serde_derive", "derive"]}
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
clap = {version="4.3.19", features = ["derive"]}
lazy_static = "1.4.0"
log = "0.4.19"
simple_logger = "4.2.0"