[package]
name = "persistent-evdev-rs"
authors = ["FlorianNAdam"]
description = "Persistent proxy for evdev devices"
homepage = "https://github.com/FlorianNAdam/persistent-input-rs"
repository = "https://github.com/FlorianNAdam/persistent-input-rs"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
udev = "0.9.3"
serde = {version="1.0.219", features=["serde_derive", "derive"]}
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["sync", "time", "rt-multi-thread", "macros"] }
clap = {version="4.5.45", features = ["derive"]}
lazy_static = "1.5.0"
log = "0.4.27"
simple_logger = "5.0.0"
evdev = "0.13.1"
